# rust_game_remake

./: Cargo.toml  README.md
assets/data/base_character_stats/: adventurer.yaml  female.yaml  player.yaml  soldier.yaml  zombie.yaml
assets/data/difficulty_settings/: easy.yaml  hard.yaml  normal.yaml
assets/data/runtime/: current_game.yaml  leaderboard.yaml
src/: data.rs  main.rs  math.rs  scenes.rs  support.rs  theme.rs
src/data/: character.rs  data_store.rs  difficulty.rs  leaderboard.rs  mod.rs
src/scenes/: character_creation.rs  difficulty_selection.rs  game.rs  game_over.rs  macros.rs  main_menu.rs  mod.rs  test_scene.rs
src/scenes/game/: actions.rs
src/support/: mod.rs
